cmake_minimum_required(VERSION 3.22)

# Project configuration
project(
    ctd-skyrim
    VERSION 0.1.0
    LANGUAGES CXX
)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON)
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_DEBUG OFF)

# MSVC runtime library (must match Rust)
# Use dynamically linked runtime (DLL) to match Rust default
set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")

# ============================================================================
# Dependencies
# ============================================================================

include(FetchContent)

# Note: We manually handle Rust build instead of using Corrosion
# because Corrosion's IMPORTED targets don't create proper Visual Studio
# build order dependencies for CXX bridge header generation

# fmt (required by CommonLibSSE-NG)
# Use OVERRIDE_FIND_PACKAGE to satisfy find_package(fmt) calls
FetchContent_Declare(
    fmt
    GIT_REPOSITORY https://github.com/fmtlib/fmt.git
    GIT_TAG 10.2.1
    OVERRIDE_FIND_PACKAGE
)
FetchContent_MakeAvailable(fmt)

# spdlog (required by CommonLibSSE-NG)
FetchContent_Declare(
    spdlog
    GIT_REPOSITORY https://github.com/gabime/spdlog.git
    GIT_TAG v1.14.1
    OVERRIDE_FIND_PACKAGE
)
set(SPDLOG_FMT_EXTERNAL ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(spdlog)

# rapidcsv (required by CommonLibSSE-NG)
FetchContent_Declare(
    rapidcsv
    GIT_REPOSITORY https://github.com/d99kris/rapidcsv.git
    GIT_TAG v8.83
)
FetchContent_MakeAvailable(rapidcsv)

# CommonLibSSE-NG
# Manually populate and add with EXCLUDE_FROM_ALL + SYSTEM to avoid export issues
FetchContent_Declare(
    CommonLibSSE
    GIT_REPOSITORY https://github.com/CharmedBaryon/CommonLibSSE-NG.git
    GIT_TAG main
)
set(BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(ENABLE_SKYRIM_SE ON CACHE BOOL "" FORCE)
set(ENABLE_SKYRIM_AE ON CACHE BOOL "" FORCE)
set(ENABLE_SKYRIM_VR OFF CACHE BOOL "" FORCE)
set(RAPIDCSV_INCLUDE_DIRS ${rapidcsv_SOURCE_DIR}/src CACHE PATH "" FORCE)

# Skip install rules for CommonLibSSE to avoid export conflicts
FetchContent_GetProperties(CommonLibSSE)
if(NOT commonlibsse_POPULATED)
    FetchContent_Populate(CommonLibSSE)
    # Disable install() commands in the subdirectory
    set(CMAKE_SKIP_INSTALL_RULES ON)
    add_subdirectory(${commonlibsse_SOURCE_DIR} ${commonlibsse_BINARY_DIR} EXCLUDE_FROM_ALL)
    set(CMAKE_SKIP_INSTALL_RULES OFF)
endif()

# ============================================================================
# Rust Library (Manual Build)
# ============================================================================

# Output paths for the Rust build
set(RUST_TARGET_DIR "${CMAKE_BINARY_DIR}/rust-build")
set(RUST_LIB_PATH "${RUST_TARGET_DIR}/x86_64-pc-windows-msvc/release/ctd_skyrim.lib")
set(CXX_BRIDGE_DIR "${RUST_TARGET_DIR}/x86_64-pc-windows-msvc/cxxbridge/ctd-skyrim/src")
set(CXX_BRIDGE_HEADER "${CXX_BRIDGE_DIR}/lib.rs.h")

# Custom command to build the Rust library
# This runs cargo build and produces both the .lib and the CXX bridge headers
add_custom_command(
    OUTPUT ${RUST_LIB_PATH} ${CXX_BRIDGE_HEADER}
    COMMAND cargo build --release
        --manifest-path "${CMAKE_CURRENT_SOURCE_DIR}/Cargo.toml"
        --target x86_64-pc-windows-msvc
        --target-dir "${RUST_TARGET_DIR}"
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    COMMENT "Building Rust library (ctd-skyrim)..."
    VERBATIM
)

# Custom target that depends on Rust build outputs
add_custom_target(ctd-skyrim-build ALL
    DEPENDS ${RUST_LIB_PATH} ${CXX_BRIDGE_HEADER}
)

# Create an IMPORTED library target for the Rust static library
add_library(ctd-skyrim-lib STATIC IMPORTED GLOBAL)
set_target_properties(ctd-skyrim-lib PROPERTIES
    IMPORTED_LOCATION ${RUST_LIB_PATH}
)
add_dependencies(ctd-skyrim-lib ctd-skyrim-build)

# ============================================================================
# C++ Plugin
# ============================================================================

# Find C++ source files
file(GLOB_RECURSE CPP_SOURCES
    "${CMAKE_CURRENT_SOURCE_DIR}/cpp/*.cpp"
)

# Create the SKSE plugin DLL (use different name to avoid collision with Rust lib)
set(PLUGIN_TARGET ctd-skyrim-plugin)
add_library(${PLUGIN_TARGET} SHARED
    ${CPP_SOURCES}
)

target_include_directories(${PLUGIN_TARGET} PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    # Parent directory so "ctd-skyrim/cpp/..." resolves
    ${CMAKE_CURRENT_SOURCE_DIR}/..
    # CXX bridge output location (generated by Rust build)
    ${RUST_TARGET_DIR}/cxxbridge
    ${RUST_TARGET_DIR}/x86_64-pc-windows-msvc/cxxbridge
    # rapidcsv (needed for CommonLibSSE headers)
    ${rapidcsv_SOURCE_DIR}/src
)

target_link_libraries(${PLUGIN_TARGET} PRIVATE
    CommonLibSSE
    ctd-skyrim-lib
    # Windows libraries required by Rust
    DbgHelp
    ntdll
    userenv
    ws2_32
    kernel32
    bcrypt
    RuntimeObject
)

# Ensure plugin waits for Rust build (which generates CXX headers)
add_dependencies(${PLUGIN_TARGET} ctd-skyrim-build)

# ============================================================================
# Output Configuration
# ============================================================================

# Output to a convenient location
set_target_properties(${PLUGIN_TARGET} PROPERTIES
    OUTPUT_NAME "ctd-skyrim"
    SUFFIX ".dll"
)

# Install target for distribution
install(TARGETS ${PLUGIN_TARGET}
    RUNTIME DESTINATION "SKSE/Plugins"
)
